# biquad-rs

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md
src/: coefficients.rs  frequency.rs  lib.rs
test/: comparaison_lowpass_to_scipy.py  comparaison_notch_to_scipy.py  comparaison_to_scipy.py
