[package]
name = "biquad"
version = "0.2.0"
authors = ["Emil Fresk <emil.fresk@gmail.com>"]
description = "A library for digital second order IIR filtrers, also known as biquads."
categories = ["embedded", "no-std"]
keywords = ["biquad", "filter", "iir"]
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/korken89/biquad-rs"
edition = "2018"

[dependencies]
